# RAGVenture

./: .dockerignore  .gitignore  .pre-commit-config.yaml  =4.0.0  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.gpu  Dockerfile.test  INDEPENDENT_REVIEW.md  LICENSE  README.md  ROADMAP.md  canvas_suggested_example.py  canvas_with_deprecated.py  docker-compose.yml  embed_master.py  main.py  market_analysis_demo.py  mkdocs.yml  parse_junit_times.py  parse_top50.py  pyproject.toml  rag_startup_ideas.py  requirements-test.txt  requirements.txt  settings.py  setup.py  test_embedding.py  test_performance.py  tests_durations_caching.xml  tests_durations_full.txt  tests_durations_full.xml  tests_durations_generators.xml  tests_durations_junit.xml  tests_durations_only.txt  (+2 more)
.github/workflows/: ci.yml  docker-build.yml  mirror.yml  python-app.yml
.release-notes/: v0.9.2.md
config/: config.py  logging_config.py
data/: sample_startups.json
docs/: api.md  architecture.md  code_of_conduct.md  configuration.md  contributing.md  examples.md  index.md  market_analysis.md
docs/user-guide/: index.md
src/config/: __init__.py
src/rag_startups/: __init__.py  __main__.py  cli.py  cli_models.py  embed_master.py  main.py
src/rag_startups/analysis/: external_data.py  market_analyzer.py  market_size.py  models.py
src/rag_startups/config/: __init__.py  config.py  migration.py  settings.py  validator.py
src/rag_startups/core/: __init__.py  model_manager.py  model_migrations.py  model_service.py  rag_chain.py  rag_service.py  startup_metadata.py
src/rag_startups/data/: __init__.py  convert_yc_data.py  loader.py
src/rag_startups/embeddings/: __init__.py  embedding.py
src/rag_startups/idea_generator/: generator.py  processors.py  prompts.py
src/rag_startups/idea_generator/examples/: basic_usage.py
src/rag_startups/utils/: caching.py  exceptions.py  output_formatter.py  spinner.py  timing.py
tests/: __init__.py  conftest.py  test_caching.py  test_cli.py  test_cli_integration.py  test_config_validation.py  test_convert_yc_data.py  test_data_loader.py  test_dependency_patterns.py  test_docker_fixes.py  test_enhanced_config.py  test_extraction.py  test_generator.py  test_gpu_fallback.py  test_market_analysis.py  test_market_analyzer.py  test_model_integration.py  test_performance.py  test_performance_scenarios.py  test_quickstart.py  test_rag_chain.py  test_rag_integration.py  test_real_data.py  test_startup_metadata.py
tests/data/: sample_yc.csv
tests/idea_generator/: test_generator.py  test_processors.py
